@@ -1,3 +1,6 @@
+1915.	[func]		dig now has a '-q queryname' and '+showsearch' options.
+			[RT #15034]
+
 1914.	[bug]		Strings returned from cfg_obj_asstring() should be
 			treated as read-only.  The prototype for 
 			cfg_obj_asstring() has been updated to reflect this.
